Sun Jun 28 03:20:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * src/*.{h,cpp}:
          Use doxygen comment tags, small code improvements

        * src/gperf.mpc:
          Build a shared library that can later be used by gperf

        * src/gperf_export.h:
          New file

Wed Jul 02 11:30:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * src/Key_List.cpp:

          Update some missed ACE_OS:: in generated code. This was hi-lighted
          by test code built with cygwin build which produced:
          cpp.cpp: In function `const char* in_word_set(const char*, unsigned int)':
          cpp.cpp:179: error: `strcmp' undeclared (first use this function)

          Original modification done with "ace" changelog entry:
          Sat Jun 30 05:11:43 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>
          Changed code generated by gperf for usage by the IDL compiler to use functions
          in ACE_OS instead of raw OS calls.

Wed Sep 20 23:26:33 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * src/Key_List.cpp (output_switch):

          No need to use the ACE_AUTO_PTR_RESET macro.  The
          ACE_Auto_Base_Array_Ptr<> class template provides the reset
          method.

Mon Oct 24 02:36:08 UTC 2006  Ossama Othman  <ossama_othman at symantec dot com>

        * apps/gperf/src/Key_List.cpp:

          Addressed Coverity RESOURCE_LEAK errors.

Thu Sep 21 11:54:54 UTC 2006  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * src/Key_List.cpp (output_hash_function): Fixed a bug where the
          wrong type is chosen if max_hash_value was == UCHAR_MAX or
          _USHRT_MAX.  Thanks to Jody Hagins <jody at atdesk dot com> for
          this fix.  This fixes bug id 2655.

Tue Mar 14 21:08:12 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>

        * apps/gperf/src/Gen_Perf.cpp
        * apps/gperf/src/Key_List.cpp
        * apps/gperf/src/List_Node.cpp